📝 docs: add strict Java 11 compatibility rules to AGENTS.md